# Experiments

./: .clang-format  .gitignore  README.md  cer  cer_gcc  cer_tetris  chAll.sh  clang_qtcreator_flags.txt  cloneAll.sh  collisions.html  compile_flags.txt  decltype_auto_propagation.cpp  fold_fun.cpp  fold_tester.cpp  formatAll.sh  formatOHWorkspace.sh  function_ref.cpp  function_ref_new.cpp  function_ref_old.cpp  multi_breakout.cpp  run_multi_breakout.sh  sfml_tetris.cpp  sugar.cpp  test2.cpp  testLol.sh  testfilter.cpp  tinyecs.cpp  touhouFullscreenRun.sh  updateInitRepo.sh  updateSSVCMake.sh  updateSSVCMakeSingle.sh  verifytest
AlgoVee/: Boilerplate.hpp  Common.hpp  compile.sh  main.cpp
AlgoViz/: main.cpp
CESystem/: CMakeLists.txt
FightGame/: boilerplate.cpp  cDebug.sh  compile.sh  crashTest.cpp  main.cpp
PHPStuff/: core.php  createPost.php  index.php  loginSuccess.php  newPost.php  posts.json  registerLogin.php  registerSuccess.php  viewPost.php
Random/: arity.cpp  asm2.txt  batching.cpp  batching2.cpp  benchDistr.cpp  benchFlags.cpp  clang_fail.cpp  compile.sh  compileCallgrind.sh  compileDDD.sh  compileDebug.sh  compileGcc.sh  compileGccnosfml.sh  compileRel.sh  compileRelGcc.sh  compile_gcc_nosfml.sh  configtest.cpp  cpp2a_ctloops.cpp  cpp_compare.py  cpp_compare.sh  cq.cpp  cts.cpp  curry_cexpr.cpp  curry_gcc_bug.cpp  curry_old.cpp  currypls.cpp  dod_fn_queue.cpp  exprparse.cpp  flagFieldGen.cpp  fnt.cpp  gae_challenge  gcc5bug.cpp  genPrep.cpp  ice.cpp  itrMangerBench.cpp  latch.cpp  latexpp.cpp  managerImpl2  mplTests.cpp  mplloop.cpp  (+50 more)
Random/fn_queue/: CMakeLists.txt  aliases.hpp  base_fn_queue.cpp  dependencies.hpp  dynamic_storage.hpp  elog.hpp  fixed_storage.hpp  main.cpp  old_fn_queue.hpp  utils.hpp  vtable.hpp
Random/fn_queue/test/: CMakeLists.txt  old_tests.cpp  test_utils.hpp
Random/fn_queue/test/basic/: should_pass.cpp
SSVVM/: CMakeLists.txt
SSVVM/include/SSVVM/: ASMLexicalAnalyzer.hpp  Assembler.hpp  BoundFunction.hpp  Common.hpp  Instruction.hpp  OpCodes.hpp  Operations.hpp  Params.hpp  Preprocessor.hpp  Program.hpp  Register.hpp  Registry.hpp  SSVVM.hpp  SourceVeeAsm.hpp  Stack.hpp  UtilsStringifier.hpp  Value.hpp  VirtualMachine.hpp
SSVVM/include/SSVVM/Other/: FSM.hpp  Graph.hpp  LexicalAnalyzer.hpp  LexicalFSM.hpp
SSVVM/src/SSVVM/: main.cpp
SVJ/: CMakeLists.txt
TestScript/: CMakeLists.txt
TestScript/include/TestScript/Engine/: ASTImpl.hpp  ASTNode.hpp  Common.hpp  Ctx.hpp  Engine.hpp  Node.hpp  NodeCtx.hpp  Parser.hpp  Rule.hpp  RuleKey.hpp  RulePart.hpp  RuleSet.hpp  Token.hpp
TestScript/include/TestScript/Language/: Language.hpp
TestScript/src/: main.cpp
cSocket/: client.c  client.x  (+5 more)
emscripten/: CMakeLists.txt  bug.cpp  bug_clang.cpp  c.sh  c_opt.sh  dynamic_draw_example.cpp  g.sh  main.cpp  main_old.cpp  p.sh  p_opt.sh  sis.cpp  test_ex.cpp  winp.sh
emscripten/crap/: dynamic_draw_example.cpp  main_old.cpp  sis.cpp  stdlayouttuple.hpp  temp_mat.cpp  temp_mat2.cpp  test_ex.cpp  test_ex2.cpp  texc.sh
emscripten/include/vrm/: sdl.hpp
emscripten/include/vrm/gl/: attribute.hpp  common.hpp  fbo.hpp  index_type.hpp  program.hpp  texture2d.hpp  uniform.hpp  vao.hpp  vbo.hpp
emscripten/include/vrm/sdl/: common.hpp  elements.hpp  events.hpp  input.hpp  internal.hpp  utils.hpp
emscripten/include/vrm/sdl/common/: error.hpp  typedefs.hpp
emscripten/include/vrm/sdl/context/: context.hpp  context.inl  context_settings.hpp  unique_sdl_resources.hpp
emscripten/include/vrm/sdl/dependencies/: emscripten.hpp  regular.hpp
emscripten/include/vrm/sdl/elements/: glcontext.hpp  input_state.hpp  renderer.hpp  sdl_element.hpp  sdl_window.hpp  surface.hpp  surface.inl  ttffont.hpp
emscripten/include/vrm/sdl/events/: sdl_event_manager.hpp
emscripten/include/vrm/sdl/global/: global_context.hpp
emscripten/include/vrm/sdl/glsl/: batched_sprite.frag  sprite.frag  sprite.vert
emscripten/include/vrm/sdl/input/: kkey.hpp  null_handlers.hpp
emscripten/include/vrm/sdl/input/null_handlers/: null_handlers.hpp  null_handlers.inl
emscripten/include/vrm/sdl/math/: angle.hpp  ratio_scale.hpp  sin_cos_table.hpp  transform_2d.hpp  trig_table.hpp
emscripten/include/vrm/sdl/resource/: unique_resource.hpp
emscripten/include/vrm/sdl/utils/: delegate.hpp  fixed_sparse_int_set.hpp
emscripten/include/vrm/sdl/window/: window_scale.hpp
emscripten/src/: main.cpp
emscripten/vrm/: gl.hpp  sdl.hpp
emscripten/vrm/gl/: attribute_helpers.hpp  check.hpp  primitive.hpp  shader.hpp  texture2d.hpp  vbo.hpp
emscripten/vrm/sdl/: camera.hpp  common.hpp  context.hpp  dependencies.hpp  elements.hpp  gl.hpp  global.hpp  math.hpp  resource.hpp  utils.hpp  window.hpp
emscripten/vrm/sdl/camera/: camera_2d.hpp
emscripten/vrm/sdl/common/: cast.hpp  dependencies.hpp  error.hpp  key.hpp  kkey.hpp  macros.hpp  mbtn.hpp  null_handlers.hpp  null_handlers.inl  typedefs.hpp
emscripten/vrm/sdl/context/: context.hpp  context.inl  context_settings.hpp  static_timer.hpp  unique_sdl_resources.hpp
emscripten/vrm/sdl/dependencies/: emscripten.hpp  regular.hpp  standard.hpp
emscripten/vrm/sdl/elements/: context.hpp  context.inl  glcontext.hpp  image.hpp  input_state.hpp  renderer.hpp  renderer.inl  sdl_element.hpp  sdl_window.hpp  space_data.hpp  sprite.hpp  sprite.inl  surface.hpp  surface.inl  texture.hpp  ttffont.hpp  window.hpp
emscripten/vrm/sdl/events/: sdl_event_manager.hpp
emscripten/vrm/sdl/gl/: attribute.hpp  attribute_helpers.hpp  check.hpp  fbo.hpp  index_type.hpp  macros.hpp  primitive.hpp  program.hpp  shader.hpp  texture2d.hpp  uniform.hpp  vao.hpp  vbo.hpp
emscripten/vrm/sdl/global/: global_context.hpp
emscripten/vrm/sdl/glsl/: batched_sprite.frag  batched_sprite.vert  sprite.frag
emscripten/vrm/sdl/internal/: api.hpp
emscripten/vrm/sdl/math/: angle.hpp  mat.hpp  sin_cos_table.hpp  trig_table.hpp  vec.hpp  vec2.hpp
emscripten/vrm/sdl/resource/: unique_resource.hpp  unique_sdl_resources.hpp
emscripten/vrm/sdl/utils/: delegate.hpp  fixed_sparse_int_set.hpp  for_args.hpp
emscripten/vrm/sdl/window/: window.hpp  window_scale.hpp
(+321 files in other folders)
