cmake_minimum_required(VERSION 2.8)
project(TestScript)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/extlibs/SSVCMake/cmake/modules/;${CMAKE_MODULE_PATH}")
include(SSVCMake)

SSVCMake_setDefaults()
SSVCMake_findExtlib(SSVUtils)
SSVCMake_findExtlib(SSVUtilsJson)

add_executable(${PROJECT_NAME} ${SRC_LIST})

if(UNIX)
	install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/games/${PROJECT_NAME}/)
	install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/_RELEASE/)
	install(DIRECTORY ${CMAKE_SOURCE_DIR}/_RELEASE/ DESTINATION ${CMAKE_INSTALL_PREFIX}/games/${PROJECT_NAME}/)
	install(PROGRAMS ${CMAKE_SOURCE_DIR}/_RELEASE/${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/games/${PROJECT_NAME}/ PERMISSIONS WORLD_EXECUTE WORLD_READ)
else(WIN32)
	install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/_RELEASE/)
endif()
